--- a/index.html
+++ b/index.html
@@ -627,6 +627,8 @@
 
     <footer class="footer">
         © 2025 ABC Healthcare · Help Center v2.0
+        <br>
+        <a href="qr-generator.html" style="color: var(--slate-400); text-decoration: none; font-size: 0.75rem; margin-top: 0.5rem; display: inline-block;">Admin: QR Code Generator</a>
     </footer>
 
     <script>
