--- a/index.html
+++ b/index.html
@@ -626,15 +626,16 @@
     </main>
 
     <footer class="footer">
-        © 2025 Help Center v2.0
-        <br>
-        <a href="qr-generator.html" style="color: var(--slate-400); text-decoration: none; font-size: 0.75rem; margin-top: 0.5rem; display: inline-block;">Admin: QR Code Generator</a>
-        <br>
-        <div style="margin-top: 1.5rem; padding-top: 1rem; border-top: 1px solid rgba(148, 163, 184, 0.2);">
+        <div style="margin-bottom: 1rem;">
             <div style="display: flex; align-items: center; justify-content: center; gap: 0.75rem;">
                 <span style="color: var(--slate-400); font-size: 0.875rem;">Powered by</span>
-                <img src="Aptitude_Logo_White.png" alt="Aptitude" style="height: 24px; filter: brightness(0) saturate(100%) invert(73%) sepia(8%) saturate(574%) hue-rotate(176deg) brightness(95%) contrast(88%);">
+                <img src="Aptitude_Logo_White.png" alt="Aptitude" style="height: 24px; filter: invert(1) brightness(0.65) contrast(0.85);">
             </div>
+        </div>
+        <div style="padding-top: 1rem; border-top: 1px solid rgba(148, 163, 184, 0.2);">
+            © 2025 Help Center v2.0
+            <br>
+            <a href="qr-generator.html" style="color: var(--slate-400); text-decoration: none; font-size: 0.75rem; margin-top: 0.5rem; display: inline-block;">Admin: QR Code Generator</a>
         </div>
     </footer>
 
