--- a/index.html
+++ b/index.html
@@ -627,9 +627,9 @@
 
     <footer class="footer">
         <div style="margin-bottom: 1rem;">
-            <div style="display: flex; align-items: center; justify-content: center; gap: 0.75rem;">
+            <div style="display: flex; align-items: center; justify-content: center; gap: 0.25rem;">
                 <span style="color: var(--slate-400); font-size: 0.875rem;">Powered by</span>
-                <img src="Aptitude_Logo_White.png" alt="Aptitude" style="height: 24px; opacity: 0.64;">
+                <span style="color: var(--slate-400); font-size: 1rem; font-weight: 700;">aptitude</span>
             </div>
         </div>
         <div style="padding-top: 1rem; border-top: 1px solid rgba(148, 163, 184, 0.2);">
