Update title and QR generator link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <title>ABC Healthcare Portal</title>
+  <title>Help Center</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400;500;600;700&family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet" />
@@ -99,7 +99,7 @@
         </svg>
         <span>Facility Services</span>
       </div>
-      <h1>ABC Healthcare Portal</h1>
+      <h1>Help Center</h1>
       <p class="subtitle">Asset management & maintenance support</p>
     </div>
   </header>
