Add app folder and update Help Center theme

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         const maintenanceEmail = `mailto:derek.seitz@aptitudeii.com?subject=Issue Report: Asset ${assetId}&body=Asset ID: ${assetId}%0D%0ATandem Link: ${tandemUrl}%0D%0A%0D%0APlease describe the issue:%0D%0A`;
         document.getElementById('btn-maintenance').href = maintenanceEmail;
         
-        document.getElementById('btn-service').href = `https://your-cmms-system.com/asset/${assetId}`;
+        document.getElementById('btn-service').href = `https://www.ibm.com/products/maximo`;
       }
     } else {
       // Show no-asset view
